# consai2-ibis

./: README.md
consai2_gui/: setup.py
consai2_receiver/: package.xml  setup.py
consai2_stp/: CMakeLists.txt  package.xml
consai2_stp/include/: game_situation.h  play_executer.h  strategy.h
consai2_stp/include/app/: app.h
consai2_stp/include/behavior_tree/: parallel_all.h  parallel_one.h  selector.h  sequence.h
consai2_stp/include/behavior_tree/status_converter/: always.h  invert.h  status_converter.h
consai2_stp/include/composite/: component.h  composite.h  leaf.h
consai2_stp/include/field_analysis/: field_analyzer.h
consai2_stp/include/field_analysis/CMD14TDP_3/: conditions.h
consai2_stp/include/play/: play.h  play_book.h
consai2_stp/include/play/entry_point/: halt.h  stop.h
consai2_stp/include/play/entry_point/ours/: kick_off_preparation.h  kick_off_start.h
consai2_stp/include/play/inplay/: ball_in_our_defense.h
consai2_stp/include/play/test/: test_ball_placement.h  test_goalie.h  test_kick_to_target.h  test_pass.h
consai2_stp/include/tactic/: README.md  ball_placement.h  goalie.h  halt.h  kick_to_target.h  pass_receive.h  wall_ball_placement.h
consai2_stp/include/tactic/skill/: README.md  custom_skill.h  face_to_target.h  go_between.h  go_point.h  kick.h  skill.h  spin_at_target.h
consai2_stp/include/utils/: boost_geometry.h  control_target_builder.h  eigen_adapter.h  interval.h  target.h
consai2_stp/include/world_model/: assignment.h  ball_info.h  carpet_model.h  constants.h  pose2d.h  robot_node.h  tool.h  world_model.h
consai2_stp/src/: CMakeLists.txt  consai2_stp_node.cpp  play_executer.cpp  test_ball_placement.cpp  test_goalie.cpp  test_pass.cpp
consai2_stp/src/app/: app.cpp
consai2_stp/src/behavior_tree/: serialize.cpp
consai2_stp/src/field_analysis/: CMakeLists.txt  field_analyzer.cpp
consai2_stp/src/field_analysis/CMD14TDP_3/: CMakeLists.txt  receive_condition.cpp  shoot_condition.cpp
consai2_stp/src/play/: CMakeLists.txt
consai2_stp/src/play/test/: CMakeLists.txt  test_ball_placement.cpp  test_goalie.cpp  test_kick_to_target.cpp  test_pass.cpp
consai2_stp/src/tactic/: CMakeLists.txt  kick_to_target.cpp  pass_receive.cpp
consai2_stp/src/tactic/skill/: CMakeLists.txt  face_to_target.cpp  go_between.cpp  go_point.cpp  spin_at_target.cpp
consai2_stp/src/utils/: CMakeLists.txt  control_target_builder.cpp  target.cpp
consai2_stp/src/world_model/: CMakeLists.txt  assignment.cpp  robot_node.cpp  tool.cpp  world_model.cpp
doc/: コマンド集.txt
(+48 files in other folders)
